[workspace]
resolver = "2"
members = [
  "sdk/rust/protocol",
  "publisher_sdk/rust",
  "sdk/rust/client",
  "agent",
]

[workspace.dependencies]
pyth-sdk = "0.8.0"
anyhow = "1.0.98"
arc-swap = "1.7.1"
async-nats = "0.39.0"
async-stream = "0.3.6"
async-trait = "0.1.88"
aws-config = "1.8.14"
aws-sdk-s3 = "1.124.0"
axum-otel-metrics = "0.10.0"
base64 = "0.22.1"
bip32 = "0.5.2"
bs58 = "0.5.1"
byteorder = "1.5.0"
cadd = "0.2.0"
chrono = "0.4.41"
chrono-tz = "0.10.3"
config = "0.15.11"
csv = "1.4.0"
dashmap = "6.1.0"
derivative = "2.2.0"
derive_more = "2.0.1"
fs-err = "3.1.1"
futures = "0.3.31"
futures-util = "0.3.31"
governor = "0.10.0"
headers = "0.4.0"
http = "1.3.1"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
itertools = "0.14.0"
json-pretty-compact = "0.1.2"
lazy_static = "1.5.0"
mry = "0.13.0"
opentelemetry = "0.28.0"
opentelemetry-prometheus = "0.28.0"
option-inspect-none = "1"
pin-project = "1"
prometheus = "0.13.4"
prometheus_exporter = "0.8.5"
protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"
psl = "2"
pyth-hermes-client-rust = "0.0.1"
pythnet-sdk = "2.3.1"
rand = "0.9.0"
replace_with = "0.1.8"
scopeguard = "1.2.0"
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde-this-or-that = "0.5.0"
serde_repr = "0.1.20"
sha2 = "0.10.8"
sha3 = "0.10.8"
tempfile = "3.23.0"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-opentelemetry = "0.29.0"
truncate-integer = "0.5.1"
utoipa-axum = "0.2.0"
winnow = "0.7.6"

[workspace.dependencies.pyth-lazer-publisher-sdk]
path = "publisher_sdk/rust"
version = "0.31.0"

[workspace.dependencies.pyth-lazer-protocol]
path = "sdk/rust/protocol"
version = "0.30.1"

[workspace.dependencies.pyth-lazer-client]
path = "sdk/rust/client"
version = "19.1.0"

[workspace.dependencies.async-stripe]
version = "=1.0.0-rc.0"
default-features = true

[workspace.dependencies.async-stripe-core]
version = "=1.0.0-rc.0"
features = ["customer"]

[workspace.dependencies.async-stripe-misc]
version = "=1.0.0-rc.0"
features = ["entitlements_active_entitlement", "entitlements_feature"]

[workspace.dependencies.async-stripe-shared]
version = "=1.0.0-rc.0"

[workspace.dependencies.axum]
version = "0.8.1"
features = ["ws"]

[workspace.dependencies.axum-extra]
version = "0.10.1"
features = ["query", "multipart"]

[workspace.dependencies.axum-streams]
version = "0.20.0"
features = ["text", "json"]

[workspace.dependencies.backoff]
version = "0.4.0"
features = ["futures", "tokio"]

[workspace.dependencies.bincode]
version = "2.0.1"
features = ["serde"]

[workspace.dependencies.bip39]
version = "2.1.0"
features = ["rand"]

[workspace.dependencies.bytes]
version = "1.10.1"
features = ["serde"]

[workspace.dependencies.cached]
version = "0.56.0"
features = ["async"]

[workspace.dependencies.clap]
version = "4.5.32"
features = ["derive"]

[workspace.dependencies.clickhouse]
version = "0.13.2"
features = ["inserter", "native-tls", "uuid"]

[workspace.dependencies.ed25519-dalek]
version = "2.1.1"
features = ["rand_core"]

[workspace.dependencies.hex]
version = "0.4.3"
features = ["serde"]

[workspace.dependencies.hyper]
version = "1.6.0"
features = ["http1", "server"]

[workspace.dependencies.hyper-util]
version = "0.1.10"
features = ["tokio"]

[workspace.dependencies.k256]
version = "0.13.4"
features = ["ecdsa"]

[workspace.dependencies.opentelemetry_sdk]
version = "0.28.0"
features = ["rt-tokio"]

[workspace.dependencies.opentelemetry-otlp]
version = "0.28.0"
features = ["grpc-tonic"]

[workspace.dependencies.rdkafka]
version = "0.37.0"

[workspace.dependencies.reqwest]
version = "0.12.23"
features = ["json", "multipart"]

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.serde_with]
version = "3.12.0"
features = ["base64"]

[workspace.dependencies.soketto]
version = "0.8.1"
features = ["http"]

[workspace.dependencies.strum]
version = "0.27.2"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.44.1"
features = ["full"]

[workspace.dependencies.tokio-tungstenite]
version = "0.26.2"
features = ["native-tls", "url"]

[workspace.dependencies.tokio-util]
version = "0.7.14"
features = ["compat"]

[workspace.dependencies.tower-http]
version = "0.6.1"
features = ["cors"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter", "json"]

[workspace.dependencies.url]
version = "2.5.4"
features = ["serde"]

[workspace.dependencies.utoipa]
version = "5.4.0"
features = ["axum_extras"]

[workspace.dependencies.utoipa-swagger-ui]
version = "9.0.0"
features = ["axum"]

[workspace.dependencies.uuid]
version = "1.18.1"
features = ["serde", "v4"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
wildcard_dependencies = "deny"
collapsible_if = "allow"
collapsible_else_if = "allow"
allow_attributes_without_reason = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
indexing_slicing = "warn"
panic = "warn"
panic_in_result_fn = "warn"
string_slice = "warn"
todo = "warn"
unchecked_duration_subtraction = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
collection_is_never_read = "warn"
match_wild_err_arm = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
same_name_method = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
while_float = "warn"
