[workspace]
resolver = "2"
members = [
  "agent",
  "publisher_sdk/rust",
  "publishers/example",
  "publishers/example-jrpc",
  "sdk/rust/client",
  "sdk/rust/protocol",
]

[workspace.dependencies]
alloy-primitives = "0.8.5"
anyhow = "1.0.98"
arc-swap = "1.7.1"
assert_float_eq = "1.1.4"
async-nats = "0.49.0"
async-stream = "0.3.6"
async-stripe = "=1.0.0-rc.6"
async-stripe-shared = "=1.0.0-rc.6"
async-trait = "0.1.88"
atomicwrites = "0.4.4"
aws-config = "1.8.17"
aws-sdk-s3 = "1.124.0"
axum-otel-metrics = "0.10.0"
base64 = "0.22.1"
bimap = "0.6.3"
bip32 = "0.5.2"
borsh = "1.6.1"
bs58 = "0.5.1"
byte-unit = "5.1.6"
byteorder = "1.5.0"
cadd = "0.2.0"
config = "0.15.11"
crossbeam-skiplist = "0.1.3"
csv = "1.4.0"
dashmap = "6.1.0"
derivative = "2.2.0"
displaydoc = "0.2"
dotenvy = "0.15.7"
fefix = "0.7"
flate2 = "1.1"
fs-err = "3.1.1"
fs4 = "0.13.1"
futures = "0.3.31"
futures-util = "0.3.31"
governor = "0.10.0"
headers = "0.4.0"
hmac = "0.12.1"
http = "1.3.1"
http-body = "1"
http-body-util = "0.1.3"
httpmock = "0.7"
humantime = "2.2.0"
humantime-serde = "1.1.1"
itertools = "0.14.0"
json = "0.12.4"
json-pretty-compact = "0.1.2"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
libsecp256k1 = "0.7.1"
mockall = "0.13.1"
mollusk-svm = "0.11.0"
mry = "0.13.0"
native-tls = "0.2"
nuid = "0.5.0"
num-traits = "0.2.19"
opentelemetry = "0.28.0"
opentelemetry-prometheus = "0.28.0"
option-inspect-none = "1"
pin-project = "1"
proc-macro-crate = "3.3"
proc-macro2 = "1.0"
prometheus = "0.13.4"
prometheus_exporter = "0.8.5"
proptest = "1.11.0"
proptest-arbitrary-interop = "0.1.0"
prost = "0.14.3"
protobuf = "3.4.0"
protobuf-codegen = "3.7.2"
protobuf-json-mapping = "3.4.0"
pyth-hermes-client-rust = "0.0.1"
pyth-sdk = "0.8.0"
pythnet-sdk = "2.3.1"
quote = "1.0"
rand = "0.10.1"
replace_with = "0.1.8"
reqwest-eventsource = "0.6.0"
rpassword = "7.3.1"
run_every = "0.1.1"
scopeguard = "1.2.0"
serde-big-array = "0.5.1"
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde_plain = "1.0.2"
serde_repr = "0.1.20"
serde_yaml_ng = "0.10"
sha2 = "0.10.8"
sha3 = "0.10.8"
solana-account = "3.4.0"
solana-address = "2.2.0"
solana-instruction = "3.2.0"
solana-pubkey = "3.0.0"
solana-sdk-ids = "3.1.0"
solana-system-interface = "3"
sqlx = "0.8.1"
stream_generator = "0.1.0"
tempfile = "3.23.0"
thiserror = "2.0.12"
tokio-metrics = "0.5.0"
tokio-native-tls = "0.3"
tokio-stream = "0.1.17"
toml = "0.8.19"
tonic-health = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tower = "0.5"
tracing = "0.1.41"
tracing-opentelemetry = "0.29.0"
truncate-integer = "0.5.1"
ttl_cache = "0.5.1"
utoipa-axum = "0.2.0"
xz2 = "0.1.7"

[workspace.dependencies.pyth-lazer-client]
path = "sdk/rust/client"
version = "26.4.0"

[workspace.dependencies.pyth-lazer-protocol]
path = "sdk/rust/protocol"
version = "0.45.0"

[workspace.dependencies.pyth-lazer-publisher-sdk]
path = "publisher_sdk/rust"
version = "0.45.0"

[workspace.dependencies.async-stripe-core]
features = ["customer"]
version = "=1.0.0-rc.6"

[workspace.dependencies.async-stripe-misc]
features = ["entitlements_active_entitlement", "entitlements_feature"]
version = "=1.0.0-rc.6"

[workspace.dependencies.axum]
features = ["ws"]
version = "0.8.1"

[workspace.dependencies.axum-extra]
features = ["multipart", "query"]
version = "0.10.1"

[workspace.dependencies.axum-streams]
features = ["json", "text"]
version = "0.20.0"

[workspace.dependencies.backoff]
features = ["futures", "tokio"]
version = "0.4.0"

[workspace.dependencies.bincode]
features = ["serde"]
version = "2.0.1"

[workspace.dependencies.bip39]
features = ["rand"]
version = "2.1.0"

[workspace.dependencies.bytes]
features = ["serde"]
version = "1.10.1"

[workspace.dependencies.cached]
features = ["async"]
version = "0.56.0"

[workspace.dependencies.chrono]
features = ["serde"]
version = "0.4.41"

[workspace.dependencies.chrono-tz]
features = ["serde"]
version = "0.10.3"

[workspace.dependencies.clap]
features = ["derive"]
version = "4.5.32"

[workspace.dependencies.clickhouse]
features = ["inserter", "native-tls", "uuid"]
version = "0.13.2"

[workspace.dependencies.criterion]
default-features = false
features = ["cargo_bench_support"]
version = "0.5"

[workspace.dependencies.derive_more]
features = ["full"]
version = "2.0.1"

[workspace.dependencies.ed25519-dalek]
features = ["rand_core"]
version = "2.1.1"

[workspace.dependencies.hex]
features = ["serde"]
version = "0.4.3"

[workspace.dependencies.hyper]
features = ["http1", "server"]
version = "1.6.0"

[workspace.dependencies.hyper-util]
features = ["tokio"]
version = "0.1.10"

[workspace.dependencies.insta]
features = ["yaml"]
version = "1.41"

[workspace.dependencies.k256]
features = ["ecdsa"]
version = "0.13.4"

[workspace.dependencies.moka]
features = ["future"]
version = "0.12.15"

[workspace.dependencies.opentelemetry-otlp]
features = ["grpc-tonic"]
version = "0.28.0"

[workspace.dependencies.opentelemetry_sdk]
features = ["rt-tokio"]
version = "0.28.0"

[workspace.dependencies.polars]
default-features = false
version = "0.51.0"

[workspace.dependencies.rdkafka]
version = "0.37.0"

[workspace.dependencies.reqwest]
default-features = false
features = [
  "charset",
  "http2",
  "json",
  "multipart",
  "rustls-tls",
  "system-proxy",
]
version = "0.12.23"

[workspace.dependencies.rust_decimal]
features = ["serde-with-str"]
version = "1.36.0"

[workspace.dependencies.serde]
features = ["derive"]
version = "1.0.219"

[workspace.dependencies.serde_with]
features = ["base64"]
version = "3.10.0"

[workspace.dependencies.serde_wormhole]
git = "https://github.com/wormhole-foundation/wormhole"
tag = "v2.17.1"

[workspace.dependencies.signature]
features = ["rand_core"]
version = "2.2.0"

[workspace.dependencies.soketto]
features = ["http"]
version = "0.8.1"

[workspace.dependencies.strum]
features = ["derive"]
version = "0.27.2"

[workspace.dependencies.syn]
features = ["full"]
version = "2.0"

[workspace.dependencies.time]
features = ["macros", "serde-human-readable", "serde-well-known"]
version = "0.3"

[workspace.dependencies.tinystr]
features = ["serde"]
version = "0.8"

[workspace.dependencies.tokio]
features = ["full"]
version = "1.44.1"

[workspace.dependencies.tokio-tungstenite]
features = ["native-tls", "url"]
version = "0.26.2"

[workspace.dependencies.tokio-util]
features = ["compat"]
version = "0.7.14"

[workspace.dependencies.tonic]
features = ["router", "transport"]
version = "0.14.5"

[workspace.dependencies.tower-http]
features = ["cors", "trace"]
version = "0.6.1"

[workspace.dependencies.tracing-subscriber]
features = ["env-filter", "json"]
version = "0.3.23"

[workspace.dependencies.url]
features = ["serde"]
version = "2.5.4"

[workspace.dependencies.utoipa]
features = ["axum_extras", "chrono", "decimal", "non_strict_integers", "uuid"]
version = "5.4.0"

[workspace.dependencies.utoipa-redoc]
features = ["axum"]
version = "6"

[workspace.dependencies.utoipa-swagger-ui]
features = ["axum"]
version = "9.0.0"

[workspace.dependencies.uuid]
features = ["serde", "v4"]
version = "1"

[workspace.dependencies.winnow]
version = "0.7.6"

[workspace.dependencies.wormhole-sdk]
git = "https://github.com/wormhole-foundation/wormhole"
tag = "v2.17.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
wildcard_dependencies = "deny"
collapsible_if = "allow"
collapsible_else_if = "allow"
allow_attributes_without_reason = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
indexing_slicing = "warn"
panic = "warn"
panic_in_result_fn = "warn"
string_slice = "warn"
todo = "warn"
unchecked_duration_subtraction = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
collection_is_never_read = "warn"
match_wild_err_arm = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
same_name_method = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
while_float = "warn"
