[workspace]
resolver = "2"
members = [
  "contracts/example",
  "contracts/integration-tests",
  "contracts/pyth-lazer-stellar",
  "contracts/wormhole-executor-stellar",
  "sdk/rust",
]

[workspace.dependencies]
pyth-lazer-stellar-sdk = { path = "sdk/rust" }
soroban-sdk = "22.0.5"

[profile.release]
overflow-checks = true
