[workspace]
resolver = "2"
members = [
  "contracts/integration-tests",
  "contracts/pyth-lazer-stellar",
  "contracts/wormhole-executor-stellar",
  "sdk/rust",
]

[workspace.dependencies]
pyth-lazer-stellar-sdk = { path = "sdk/rust" }
soroban-sdk = "26.1.0"

[profile.release]
overflow-checks = true
