[package]
name = "pyth-lazer-publisher-sdk"
version = "0.30.0"
edition = "2024"
description = "Pyth Lazer Publisher SDK types."
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-crosschain"

[dependencies]
pyth-lazer-protocol = { workspace = true }
anyhow = { workspace = true }
protobuf = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
fs-err = "3.1.0"
protobuf-codegen = "3.7.2"
