[package]
name = "pyth-lazer-publisher-sdk"
version = "0.36.0"
edition = "2024"
description = "Pyth Lazer Publisher SDK types."
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-crosschain"

[dependencies]
anyhow = { workspace = true }
protobuf = { workspace = true }
pyth-lazer-protocol = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
fs-err = { workspace = true }
protobuf-codegen = "3.7.2"
