[package]
name = "pyth-lazer-example-publisher-jrpc"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-lazer-public"

[dependencies]
pyth-lazer-protocol = { workspace = true }

anyhow = { workspace = true }
serde_json = { workspace = true }
soketto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
