[package]
name = "pyth-lazer-client"
version = "19.1.0"
edition = "2024"
description = "A Rust client for Pyth Lazer"
license = "Apache-2.0"

[dependencies]
pyth-lazer-protocol = { workspace = true }
pyth-lazer-publisher-sdk = { workspace = true }

tokio = { version = "1", features = ["full"] }
tokio-stream = { workspace = true }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
url = { version = "2.4", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["from"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
ttl_cache = "0.5.1"
reqwest = { workspace = true, features = ["json"] }
arc-swap = { workspace = true }
futures = { workspace = true }
humantime-serde = { workspace = true }
fs-err = { workspace = true }
atomicwrites = "0.4.4"
protobuf-json-mapping = { workspace = true }
serde_with = "3.15.1"
async-trait = "0.1.89"

[dev-dependencies]
bincode = "1.3.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
libsecp256k1 = "0.7.1"
bs58 = { workspace = true }
alloy-primitives = "0.8.19"
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
