[package]
name = "pyth-lazer-client"
version = "24.1.0"
edition = "2024"
description = "A Rust client for Pyth Lazer"
license = "Apache-2.0"

[dependencies]
pyth-lazer-protocol = { workspace = true }
pyth-lazer-publisher-sdk = { workspace = true }

anyhow = "1.0"
arc-swap = { workspace = true }
async-trait = "0.1.89"
atomicwrites = "0.4.4"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
base64 = { workspace = true }
derive_more = { version = "1.0.0", features = ["from"] }
fs-err = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
humantime-serde = { workspace = true }
protobuf-json-mapping = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.15.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { workspace = true }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tracing = "0.1"
ttl_cache = "0.5.1"
url = { version = "2.4", features = ["serde"] }

[dev-dependencies]
bincode = "1.3.3"
httpmock = "0.7"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
libsecp256k1 = "0.7.1"
bs58 = { workspace = true }
alloy-primitives = "0.8.19"
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
