[package]
name = "pyth-lazer-client"
version = "26.0.2"
edition = "2024"
description = "A Rust client for Pyth Lazer"
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-lazer-public"

[dependencies]
pyth-lazer-protocol = { workspace = true }
pyth-lazer-publisher-sdk = { workspace = true }

anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
atomicwrites = { workspace = true }
backoff = { workspace = true }
base64 = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
fs-err = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
humantime-serde = { workspace = true }
protobuf-json-mapping = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
ttl_cache = { workspace = true }
url = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
libsecp256k1 = { workspace = true }
alloy-primitives = { workspace = true }
tracing-subscriber = { workspace = true }
