[package]
name = "pyth-lazer-entitlements-sdk"
version = "0.1.0"
edition = "2024"
description = "Pyth Lazer SDK - entitlements types and manager."
license = "Apache-2.0"

[dependencies]
pyth-lazer-aggregator = { workspace = true }
pyth-lazer-internal-protocol = { workspace = true }
pyth-lazer-protocol = { workspace = true }
pyth-lazer-utils = { workspace = true }

anyhow = { workspace = true }
cached = { workspace = true }
derivative = { workspace = true }
humantime-serde = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
pyth-lazer-internal-protocol = { workspace = true }

[lints]
workspace = true
