[package]
name = "pyth-lazer-protocol"
version = "0.30.1"
edition = "2021"
description = "Pyth Lazer SDK - protocol types."
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-crosschain"

[dependencies]
byteorder = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
derive_more = { version = "1.0.0", features = ["from", "into"] }
itertools = "0.13.0"
rust_decimal = "1.36.0"
protobuf = { workspace = true }
humantime-serde = { workspace = true }
mry = { workspace = true, features = ["serde"], optional = true }
chrono = { workspace = true }
humantime = "2.2.0"
hex = { workspace = true }
thiserror = "2.0.12"
utoipa = { workspace = true }

[dev-dependencies]
bincode = "1.3.3"
ed25519-dalek = { workspace = true, features = ["rand_core"] }
libsecp256k1 = "0.7.1"
bs58 = { workspace = true }
alloy-primitives = "0.8.19"
assert_float_eq = "1.1.4"
