[package]
name = "pyth-lazer-protocol"
version = "0.38.0"
edition = "2021"
description = "Pyth Lazer SDK - protocol types."
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-crosschain"

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true }
derive_more = { version = "0.99", features = ["from", "into"] }
hex = { workspace = true }
humantime = "2.2.0"
humantime-serde = { workspace = true }
itertools = "0.13.0"
mry = { workspace = true, features = ["serde"], optional = true }
protobuf = { workspace = true }
rust_decimal = "1.36.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
strum = { workspace = true }
thiserror = "2.0.12"
utoipa = { workspace = true, optional = true }

[dev-dependencies]
bincode = "1.3.3"
ed25519-dalek = { workspace = true, features = ["rand_core"] }
libsecp256k1 = "0.7.1"
bs58 = { workspace = true }
alloy-primitives = "0.8.19"
assert_float_eq = "1.1.4"
