[package]
name = "pyth-lazer-protocol"
version = "0.45.0"
edition = "2021"
description = "Pyth Lazer SDK - protocol types."
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-lazer-public"

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true }
# Use older version to keep compatibility with old Solana toolchains.
derive_more = { version = "0.99", features = ["from", "into"] }
hex = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
itertools = { workspace = true }
mry = { workspace = true, features = ["serde"], optional = true }
protobuf = { workspace = true }
protobuf-json-mapping = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
strum = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
bincode = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
libsecp256k1 = { workspace = true }
bs58 = { workspace = true }
alloy-primitives = { workspace = true }
assert_float_eq = { workspace = true }
