[package]
name = "pyth-lazer-stellar-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyth-lazer-stellar-sdk = { workspace = true }
soroban-sdk = { workspace = true, features = ["alloc"] }

[dev-dependencies]
hex-literal = "0.4"
pyth-lazer-stellar = { path = "../pyth-lazer-stellar" }
soroban-sdk = { workspace = true, features = ["testutils"] }
